--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
-    "@mui/x-date-pickers": "^7.7.1",
-    "dayjs": "^1.11.11",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-number-format": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
